# practice_github_action

./: README.md  pyproject.toml
.github/workflows/: auto_assignees.yml  develop_artifact_make.yml
prodomo/: manage.py
prodomo/prodomo/: asgi.py  settings.py  urls.py  wsgi.py
prodomo/times/: urls.py
